; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_dbus-unit.c_property_get_can_clean.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_dbus-unit.c_property_get_can_clean.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"s\00", align 1
@_EXEC_DIRECTORY_TYPE_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i8*, i8*, i32*, i8*, i32*)* @property_get_can_clean to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @property_get_can_clean(i32* %0, i8* %1, i8* %2, i8* %3, i32* %4, i8* %5, i32* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i8* %1, i8** %10, align 8
  store i8* %2, i8** %11, align 8
  store i8* %3, i8** %12, align 8
  store i32* %4, i32** %13, align 8
  store i8* %5, i8** %14, align 8
  store i32* %6, i32** %15, align 8
  %20 = load i8*, i8** %14, align 8
  %21 = bitcast i8* %20 to i32*
  store i32* %21, i32** %16, align 8
  %22 = load i32*, i32** %9, align 8
  %23 = call i32 @assert(i32* %22)
  %24 = load i32*, i32** %13, align 8
  %25 = call i32 @assert(i32* %24)
  %26 = load i32*, i32** %16, align 8
  %27 = call i32 @unit_can_clean(i32* %26, i32* %17)
  store i32 %27, i32* %18, align 4
  %28 = load i32, i32* %18, align 4
  %29 = icmp slt i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %7
  %31 = load i32, i32* %18, align 4
  store i32 %31, i32* %8, align 4
  br label %67

32:                                               ; preds = %7
  %33 = load i32*, i32** %13, align 8
  %34 = call i32 @sd_bus_message_open_container(i32* %33, i8 signext 97, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32 %34, i32* %18, align 4
  %35 = load i32, i32* %18, align 4
  %36 = icmp slt i32 %35, 0
  br i1 %36, label %37, label %39

37:                                               ; preds = %32
  %38 = load i32, i32* %18, align 4
  store i32 %38, i32* %8, align 4
  br label %67

39:                                               ; preds = %32
  store i32 0, i32* %19, align 4
  br label %40

40:                                               ; preds = %61, %39
  %41 = load i32, i32* %19, align 4
  %42 = load i32, i32* @_EXEC_DIRECTORY_TYPE_MAX, align 4
  %43 = icmp ult i32 %41, %42
  br i1 %43, label %44, label %64

44:                                               ; preds = %40
  %45 = load i32, i32* %17, align 4
  %46 = load i32, i32* %19, align 4
  %47 = shl i32 1, %46
  %48 = call i32 @FLAGS_SET(i32 %45, i32 %47)
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %51, label %50

50:                                               ; preds = %44
  br label %61

51:                                               ; preds = %44
  %52 = load i32*, i32** %13, align 8
  %53 = load i32, i32* %19, align 4
  %54 = call i32 @exec_resource_type_to_string(i32 %53)
  %55 = call i32 @sd_bus_message_append(i32* %52, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 %54)
  store i32 %55, i32* %18, align 4
  %56 = load i32, i32* %18, align 4
  %57 = icmp slt i32 %56, 0
  br i1 %57, label %58, label %60

58:                                               ; preds = %51
  %59 = load i32, i32* %18, align 4
  store i32 %59, i32* %8, align 4
  br label %67

60:                                               ; preds = %51
  br label %61

61:                                               ; preds = %60, %50
  %62 = load i32, i32* %19, align 4
  %63 = add i32 %62, 1
  store i32 %63, i32* %19, align 4
  br label %40

64:                                               ; preds = %40
  %65 = load i32*, i32** %13, align 8
  %66 = call i32 @sd_bus_message_close_container(i32* %65)
  store i32 %66, i32* %8, align 4
  br label %67

67:                                               ; preds = %64, %58, %37, %30
  %68 = load i32, i32* %8, align 4
  ret i32 %68
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @unit_can_clean(i32*, i32*) #1

declare dso_local i32 @sd_bus_message_open_container(i32*, i8 signext, i8*) #1

declare dso_local i32 @FLAGS_SET(i32, i32) #1

declare dso_local i32 @sd_bus_message_append(i32*, i8*, i32) #1

declare dso_local i32 @exec_resource_type_to_string(i32) #1

declare dso_local i32 @sd_bus_message_close_container(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
